--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+0.8.0b
+- Added interface, OAuth and media handling code from service.pusbullet.com (ruuk)
+- Added choices for handling different push types - Play/Show|Notify|Ignore
+
 0.6.18b
 - Added Proportional notifications timeout in add-on settings
 
