--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.8.2b
+- Fix for error preventing authorization
+
 0.8.0b
 - Added interface, OAuth and media handling code from service.pusbullet.com (ruuk)
 - Added choices for handling different push types - Play/Show|Notify|Ignore
