--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.8.8b
+- Fix for error causing service startup to fail
+
 0.8.6b
 - Fix for pushes sent when Kodi is off all being played when push is received
 - Added setting 'Interrupt Playing Media' (Default: False)
