--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.8.18b
+- Fix regression on mirrored notification title (https://github.com/elbowz/xbmc.service.pushbullet/issues/20)
+
 0.8.16b
 - Fix the number of caller, in android stock is in the notification title (https://github.com/elbowz/xbmc.service.pushbullet/issues/18)
 
