--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.8.20a1
+- Added playback action (play, pause) on incoming phone call
+
 0.8.18b
 - Fix regression on mirrored notification title (https://github.com/elbowz/xbmc.service.pushbullet/issues/20)
 
