Added auto dismiss pushes on setting (issue #22)

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -61,6 +61,10 @@ msgid "Proportional notifications timeout"
 msgstr ""
 
 msgctxt "#30033"
+msgid "Auto dismiss pushes when arrived"
+msgstr ""
+
+msgctxt "#30034"
 msgid "View Channels"
 msgstr ""
 
