--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.8.22
+-Official repository release
+
 0.8.22b
 - Added auto dismiss pushes on setting (issue #22)
 - Proportional notifications timeout use notification delay as max value
